# ktor-jimmer-rest

./: .gitignore  LICENSE  README.md  jitpack.yml
.github/workflows/: gradle-publish.yml
docs/: .gitignore  mkdocs.yml  pyproject.toml
docs/docs/en/: index.md
docs/docs/zh/: index.md
docs/docs/zh/example/: data-preparation.md
ktor-jimmer-rest/: .editorconfig  build.gradle.kts  gradle.properties  settings.gradle.kts
ktor-jimmer-rest/gradle/: libs.versions.toml
ktor-jimmer-rest/gradle/wrapper/: gradle-wrapper.properties
ktor-jimmer-rest/ktor-jimmer-rest-config/: build.gradle.kts
ktor-jimmer-rest/ktor-jimmer-rest-config/src/main/kotlin/com/eimsound/config/: Configuration.kt  PageConfiguration.kt
ktor-jimmer-rest/ktor-jimmer-rest-config/src/main/kotlin/com/eimsound/jimmer/: SqlClient.kt
ktor-jimmer-rest/ktor-jimmer-rest-config/src/main/kotlin/com/eimsound/plugin/: JimmerRestApplication.kt  JimmerRestConfiguration.kt  JimmerRestPlugin.kt
ktor-jimmer-rest/ktor-jimmer-rest-provider/: build.gradle.kts
ktor-jimmer-rest/ktor-jimmer-rest-provider/src/main/kotlin/com/eimsound/provider/: CallProvider.kt  ConditionProvider.kt  EntityProvider.kt  FetcherProvider.kt  FilterProvider.kt  KeyProvider.kt  PageProvider.kt  ValidatorProvider.kt
ktor-jimmer-rest/ktor-jimmer-rest-route/: build.gradle.kts
ktor-jimmer-rest/ktor-jimmer-rest-util/: build.gradle.kts
ktor-jimmer-rest/ktor-jimmer-rest-util/src/main/kotlin/com/eimsound/: Parser.kt
ktor-jimmer-rest/ktor-jimmer-rest-validator/: build.gradle.kts
(+53 files in other folders)
