[project]
name = "ktor-jimmer-rest-doc"
dependencies = [
    "mkdocs-material>=9.5.47",
    "mkdocs-static-i18n>=1.2.3",
    "jieba>=0.42.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
doc = { cmd = "mkdocs serve", env = {} }
build = { cmd = "mkdocs build", env = {} }
